--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@typescript-eslint/eslint-plugin": "^8.24.0",
         "@typescript-eslint/parser": "^8.24.0",
         "eslint": "^9.20.1",
+        "nock": "^14.0.1",
         "tsx": "^4.19.2",
         "typescript": "^5.7.3",
         "typescript-eslint": "^8.24.0",
