--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
         "vitest": "^2.1.9"
     },
     "dependencies": {
+        "chalk": "^5.4.1",
+        "commander": "^13.1.0",
         "env-schema": "^6.0.1",
-        "openapi-types": "^12.1.3"
+        "openapi-types": "^12.1.3",
+        "types-package-json": "^2.0.39"
     }
 }
