--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "@typescript-eslint/parser": "^8.24.0",
         "@vitest/coverage-v8": "^2.1.9",
         "eslint": "^9.20.1",
+        "mockttp": "^3.15.5",
         "nock": "^14.0.1",
         "tsx": "^4.19.2",
         "typescript": "^5.7.3",
