--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
         "@typescript-eslint/eslint-plugin": "^8.24.0",
         "@typescript-eslint/parser": "^8.24.0",
         "@vitest/coverage-v8": "^2.1.9",
+        "cpy-cli": "^5.0.0",
         "eslint": "^9.20.1",
         "mockttp": "^3.15.5",
         "nock": "^14.0.1",
+        "rimraf": "^6.0.1",
         "tsx": "^4.19.2",
         "typescript": "^5.7.3",
         "typescript-eslint": "^8.24.0",
