--- a/.usage/package.json
+++ b/.usage/package.json
@@ -6,7 +6,7 @@
     "type": "module",
     "private": true,
     "scripts": {
-        "test:usage": "npm run types:check && vitest run --config tests/vitest.config.ts",
+        "test:usage": "npm install && npm run types:check && vitest run --config tests/vitest.config.ts",
         "types:check": "npx tsc --noEmit --project .",
         "pre-push": "npm run test:usage"
     },
