--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
     "version": "0.2.0",
     "description": "The CLI and a programmatic wrapper for [env-schema](https://www.npmjs.com/package/env-schema) environment variables validator.",
     "type": "module",
-    "main": "index.js",
+    "main": "./code/index.js",
+    "module": "./code/index.js",
+    "types": "./types/index.d.ts",
+    "bin": {
+        "env-schema-cli": "./code/cli/cli.js"
+    },
     "scripts": {
         "test:foundation": "npm run check-types && vitest run --config tests/foundation/.ancillary/config/vitest.config.ts",
         "check-types": "npx tsc --noEmit --project .",
@@ -12,7 +17,7 @@
         "package:de-alias": "npx tsc-alias -p ./.delivery/configuration/tsconfig.json --verbose",
         "package:bundle:copy": "cpy ./package.json ./LICENSE ./readme.md ./.delivery/.builds/dist",
         "package:pack": "cd ./.delivery/.builds/dist && npm pack",
-        "package:test:usage": "cd .usage && npm install && npm run test:usage",
+        "package:test:usage": "cd .usage && npm run test:usage",
         "package:lint:readme": "npx markdown-link-check --progress --quiet ./readme.md ./.docs",
         "package:publish": "npm publish ./.delivery/.builds/dist"
     },
@@ -29,10 +34,6 @@
     ],
     "license": "MIT",
     "author": "valentineshi.dev@gmail.com",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/WhereJuly/65-env-schema-cli.git"
-    },
     "homepage": "https://github.com/WhereJuly/65-env-schema-cli#readme",
     "issues": "https://github.com/WhereJuly/65-env-schema-cli/issues",
     "devDependencies": {
@@ -58,5 +59,12 @@
         "env-schema": "^6.0.1",
         "openapi-types": "^12.1.3",
         "types-package-json": "^2.0.39"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/WhereJuly/65-env-schema-cli.git"
+    },
+    "publishConfig": {
+        "@wherejuly:registry": "https://npm.pkg.github.com"
     }
 }
