[package] Implement (icicdr): usage package tests and examples

--- a/.usage/package.json
+++ b/.usage/package.json
@@ -12,6 +12,6 @@
     },
     "license": "UNLICENSED",
     "dependencies": {
-        "oas-markdown-merger": "file:../.delivery/.builds/dist"
+        "@wherejuly/env-schema-cli": "file:../.delivery/.builds/dist"
     }
 }
