[package] Update (docs): readme

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@wherejuly/env-schema-cli",
     "version": "0.2.4",
-    "description": "The CLI and a programmatic wrapper for [env-schema](https://www.npmjs.com/package/env-schema) environment variables validator.",
+    "description": "The the enhanced CLI and a programmatic wrapper around [env-schema](https://www.npmjs.com/package/env-schema) environment variables validator against [JSON Schema](https://json-schema.org/).",
     "type": "module",
     "main": "./code/index.js",
     "module": "./code/index.js",
