[package] Update (icicdr): debug github ci #2

--- a/.github/workflows/env-schema-cli.yml
+++ b/.github/workflows/env-schema-cli.yml
@@ -32,6 +32,8 @@ jobs:
       - name: Install dependencies and build the package
         run: |
           npm install
+          cd .usage && npm install
+          cd ../
           npm run package:build
 
       - name: Testing the latest build at usage .usage subfolder
