--- a/.github/workflows/env-schema-cli.yml
+++ b/.github/workflows/env-schema-cli.yml
@@ -9,7 +9,7 @@ on:
       - master
     paths:
       - ".github/workflows/env-schema-cli.yml"
-      - "/*.*"
+      - "/package.json"
       - "src/**"
 
 jobs:
