--- a/.github/workflows/env-schema-cli.yml
+++ b/.github/workflows/env-schema-cli.yml
@@ -9,6 +9,7 @@ on:
       - master
     paths:
       - ".github/workflows/env-schema-cli.yml"
+      - "readme.md"
       - "package.json"
       - "src/**"
 
